feat: login signup basedlined

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<div class="bg nav">
 <div class="container" style="margin-top: 100px;">
     <div class="d-flex justify-content-center h-50">
         <div class="user_card">
@@ -44,6 +45,6 @@
         </div>
       </div>
   </div>
-  
+</div>
   
   
