--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -4,19 +4,29 @@ html {
     padding: 0;
     height: 100%;
     background: #60a3bc !important;
+    
+}
+.bg{
+    background-image: url(https://raw.githubusercontent.com/IamSaransh/Caramel_admin_dashboard/master/img/login_page.png);
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:  cover ;
+
 }
 .user_card {
     height: 500px;
     width: 600px;
     margin-top: auto;
     margin-bottom: auto;
-    background: #afbfd8;
+    background: white;
     position: relative;
     display: flex;
     justify-content: center;
     flex-direction: column;
     padding: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    box-shadow: 0 4px 8px 0 rgba(131, 136, 207, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0a, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     -moz-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border-radius: 5px;
@@ -67,3 +77,4 @@ html {
 .custom-checkbox .custom-control-input:checked~.custom-control-label::before {
     background-color: #1B4F72!important;
 }
+
