--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,7 +7,8 @@ html {
     
 }
 .bg{
-    background-image: url(https://raw.githubusercontent.com/IamSaransh/Caramel_admin_dashboard/master/img/login_page.png);
+    /* background-image: url(https://raw.githubusercontent.com/IamSaransh/Caramel_admin_dashboard/master/img/login_page.png); */
+    background-image: url(https://media.istockphoto.com/photos/triangular-abstract-background-picture-id624878906?k=20&m=624878906&s=612x612&w=0&h=DKUXpuMTr4jPDageP1R-_0vuRCB2cn4Sn0GiUAESHwI=);
     width: 100%;
     height: 100%;
     background-position: center;
@@ -53,8 +54,9 @@ html {
 }
 .login_btn {
     width: 100%;
-    background: #1B4F72!important;
+    background: #6A5ACD !important;
     color: white !important;
+    text-align: center;
 }
 .login_btn:focus {
     box-shadow: none !important;
@@ -64,7 +66,7 @@ html {
     padding: 0 2rem;
 }
 .input-group-text {
-    background: #3c86b8!important;
+    background: #6A5ACD!important;
     color: white !important;
     border: 0 !important;
     border-radius: 0.25rem 0 0 0.25rem !important;
