--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css';
 @import 'https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css';
-@import "~angular-notifier/styles"
+@import "~angular-notifier/styles";
+
+html, body { 
+    height: 100%;
+ }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
